fix blob spacing

--- a/browser/src/components/ContributionCard.css
+++ b/browser/src/components/ContributionCard.css
@@ -19,8 +19,14 @@
 
 .full.full {
   height: fit-content;
-  max-width: 400px;
   width: 100%;
+}
+
+/* remove bg when its in a modal. */
+.compactContributionCardContainer.full {
+  background: none;
+  border: none;
+  padding: 0;
 }
 
 /*.contributionCardContainer > h2 {*/
@@ -103,11 +109,6 @@
   margin-top: 1rem;
 }
 
-.responseContainerContributionCard {
-  overflow-y: auto;
-  padding-right: 5px;
-}
-
 .compactContributionCardContainer ::-webkit-scrollbar {
   width: 5px;
 }
@@ -126,6 +127,7 @@
 
 .compactContributionCardContainer .response {
   z-index: 10;
+  text-shadow: var(--text-shadow-default);
   /* overflow-y:clip;
   text-overflow:ellipsis;
   white-space: break-spaces;
@@ -133,22 +135,6 @@
   -webkit-box-orient: vertical;
   /* NOTE: this needs to change with the height of compact card */
   /* -webkit-line-clamp: 8; */
-}
-
-.blobSingleContainer,
-.blobContainer {
-  height: 70px;
-  width: 150px;
-  bottom: 0;
-  margin-bottom: 80px;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.blobContainer.blobContainer {
-  height: 60px;
-  margin-bottom: 60px;
 }
 
 .compactContributionCardContainer > h2 {
